dev-env/jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: CI/CD
    gethomepage.dev/group: Dev Env
    gethomepage.dev/icon: jenkins.png
    gethomepage.dev/name: Jenkins
    gethomepage.dev/pod-selector: jenkins-cr=mornery-main
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jenkins-operator-http-mornery-main
              port:
                number: 8080
  tls:
    - hosts:
      - jenkins.<homelab-domain>
      secretName: "jenkins.<homelab-domain>-cert"
